--- a/GeoQuizL1/app/src/main/res/layout/activity_quiz.xml
+++ b/GeoQuizL1/app/src/main/res/layout/activity_quiz.xml
@@ -91,7 +91,24 @@ This means, in which direction it's contents should align.
             android:id="@+id/true_button"
             android:layout_weight="1" />
     </LinearLayout>
-    <ImageButton
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <ImageButton
+            android:id="@+id/back_button"
+            android:text="Wstecz"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawablePadding="6dp"
+            android:src="@drawable/arrow_left"/>
+
+
+
+
+
+        <ImageButton
         android:id="@+id/next_button"
         android:text="@string/next_button"
         android:layout_width="wrap_content"
@@ -99,13 +116,8 @@ This means, in which direction it's contents should align.
         android:src="@drawable/arrow_right"
         android:drawablePadding="6dp"/>
 
-    <ImageButton
-        android:id="@+id/back_button"
-        android:text="Wstecz"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:drawablePadding="6dp"
-        android:src="@drawable/arrow_left"/>
+
+        </LinearLayout>
 
 
 </LinearLayout>
